# ide-mesh-suite

./: .eslintrc.js  .gitignore  README.md  package.json  turbo.json
docs/adr/: 0001-monorepo-structure.md
services/chat-srv/: Cargo.toml
services/chat-srv/migrations/: 001_initial_schema.sql
services/chat-srv/src/: config.rs  main.rs  state.rs  websocket.rs
services/chat-srv/src/llm/: anthropic.rs  mod.rs  openai.rs
services/chat-srv/src/services/: mod.rs  user.rs
services/token-meter/config/: quotas.yaml
services/token-meter/src/: quota_manager.ts
ui/flutter_pwa/lib/services/websocket/: chat_websocket_service.dart  websocket_bridge.dart
