[package]
name = "chat-srv"
version = "1.0.0"
edition = "2021"
authors = ["Tekfly <dev@tekfly.io>"]
description = "Master-LLM Console Chat Service with OpenAI o3 and Claude integration"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# OpenAI & Anthropic clients
async-openai = "0.18"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
futures = "0.3"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dashmap = "5.5"
arc-swap = "1.6"

# Prometheus metrics
prometheus = "0.13"
prometheus-hyper = "0.2"

# Rate limiting
governor = "0.6"

# WebSocket
tokio-tungstenite = "0.21"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }

[[bin]]
name = "chat-srv"
path = "src/main.rs"